--- a/Animaciones/app/src/main/res/layout/activity_main.xml
+++ b/Animaciones/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,5 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:src="@mipmap/ic_launcher" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
