--- a/TiendaJuegos/app/src/main/res/layout/activity_main.xml
+++ b/TiendaJuegos/app/src/main/res/layout/activity_main.xml
@@ -5,4 +5,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Main">
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ver Catálogo"
+        android:id="@+id/buttonVer"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
